--- a/Ass3.html
+++ b/Ass3.html
@@ -54,12 +54,17 @@
     </ul>
     </p>
     <h1>Our Students</h1>
-    <img alt="RMIT_student" src="RMIT_student.jpeg" style="margin-left: 600px;">
-    <p style="background-color:darkblue" font-style="white">
-        What RMIT student will you be? Are you a high achiever motivated by grades or an <br> 
-        explorer who loves adventure?<br>
-        <br>
-        <a href="https://www.rmit.edu.au"><b>Find out more ></b></a> 
+    <table>
+        <td>
+            <p style="background-color:darkblue" font-style="white">
+                What RMIT student will you be? Are you a high achiever motivated by grades or an <br> 
+                explorer who loves adventure?<br>
+                <br>
+                <a href="https://www.rmit.edu.au"><b>Find out more ></b></a>
+        </td>
+        <td><img alt="RMIT_student" src="RMIT_student.jpeg" sizes="auto"></td>
+    </table>
+    
  
     </p>
     <h1>Want to know more about RMIT? Join our next Information Sessions</h1>
