--- a/Ass3.html
+++ b/Ass3.html
@@ -7,12 +7,10 @@
     <title>Rmit University</title>
     <style>
         table, th, td {
-      border: 1px  white;
-      ;
-
+      border: 1px  white
     }
     </style>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <image alt="Rmit_banner" src="RMIT_banner.png"></image>
@@ -69,17 +67,17 @@
     </p>
     <h1>Want to know more about RMIT? Join our next Information Sessions</h1>
     <table>
-        <tr style="background-color:red">
+        <tr>
             <th>Time</th>
             <th>Location</th>
             <th>Address</th>
         </tr>
-        <tr style="background-color:yellow">
+        <tr>
             <td>8:30 - 10:00</td>
             <td>January 16, 2023, Saigon South Campus, Room 2.4.02</td>
             <td>702 Nguyen Van Linh, District 7, Ho Chi Minh City</td>
         </tr>
-        <tr style="background-color:yellow">
+        <tr>
             <td>8:30 - 10:00</td>
             <td>January 16, 2023, Hanoi campus, Room 1.10.001</td>
             <td>Handi Resco Building, 521 Kim Ma, Ba Dinh District, Hanoi</td>
