--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rmit University</title>
     <style>
         table, th, td {
-      border: 1px  white
+      border: 1px  white;
     }
     </style>
     <link rel="stylesheet" href="style.css">
@@ -53,12 +53,12 @@
     </p>
     <h1>Our Students</h1>
     <table>
-        <td>
-            <p style="background-color:darkblue" font-style="white">
+        <td style="background-color:darkblue; color: white; width: 600px;">
+            <p>
                 What RMIT student will you be? Are you a high achiever motivated by grades or an <br> 
-                explorer who loves adventure?<br>
+                explorer who loves adventure?<br></p>
                 <br>
-                <a href="https://www.rmit.edu.au"><b>Find out more ></b></a>
+                <p><a href="https://www.rmit.edu.au" style="color: red"><b>Find out more ></b></a></p>
         </td>
         <td><img alt="RMIT_student" src="RMIT_student.jpeg" sizes="auto"></td>
     </table>
@@ -67,17 +67,17 @@
     </p>
     <h1>Want to know more about RMIT? Join our next Information Sessions</h1>
     <table>
-        <tr>
+        <tr style="background-color: red; color: white">
             <th>Time</th>
             <th>Location</th>
             <th>Address</th>
         </tr>
-        <tr>
+        <tr style="background-color: orange">
             <td>8:30 - 10:00</td>
             <td>January 16, 2023, Saigon South Campus, Room 2.4.02</td>
             <td>702 Nguyen Van Linh, District 7, Ho Chi Minh City</td>
         </tr>
-        <tr>
+        <tr style="background-color: orange">
             <td>8:30 - 10:00</td>
             <td>January 16, 2023, Hanoi campus, Room 1.10.001</td>
             <td>Handi Resco Building, 521 Kim Ma, Ba Dinh District, Hanoi</td>
